# distance_transform

./: CMakeLists.txt  README.md  sources_properties.cmake
bindings/python/: CMakeLists.txt  py-distance-transform.cpp
example/: CMakeLists.txt  distance_transform_example.cpp  dope_vector_example.cpp  main.cpp  py-distance-transform-minimal-example.py
include/distance_transform/: distance_transform.h  distance_transform.hpp
include/distance_transform/inlines/: distance_transform.hpp  distance_transform.inl
include/dope_vector/: DopeVector.h  Grid.h  Index.h
include/dope_vector/internal/: Common.h  Expression.h  Iterator.h
include/dope_vector/internal/eigen_support/: EigenExpression.h
include/dope_vector/internal/inlines/: DopeVector.hpp  Expression.hpp  Grid.hpp  Index.hpp  Iterator.hpp
include/dope_vector/internal/inlines/eigen_support/: EigenExpression.hpp
